--- a/source/_posts/博客备忘.md
+++ b/source/_posts/博客备忘.md
@@ -10,3 +10,9 @@ tags:
 ### 部署文章
 已经集成了 ci 同时为了方便上传文章，写了一个 `push_hexo.sh` 的脚本，文章有更改的时候只
 需要运行 `sh push_hexo.sh` 即可
+
+### 博客分支
+- master : ci 集成生成的 静态文件
+- hexo : 源文件
+在新的环境下载只需要下载仓库，配置好环境就可以食用啦
+
