--- a/source/_posts/博客备忘.md
+++ b/source/_posts/博客备忘.md
@@ -15,4 +15,7 @@ tags:
 - master : ci 集成生成的 静态文件
 - hexo : 源文件
 在新的环境下载只需要下载仓库，配置好环境就可以食用啦
+### 图床软件
+[PicGo](https://github.com/Molunerfinn/PicGo)
+有 github 和 SMS 图床
 
