--- a/source/_posts/博客备忘.md
+++ b/source/_posts/博客备忘.md
@@ -5,8 +5,8 @@ tags:
 - 备忘
 - 博客
 ---
-## 目的
 搞这个文章的目的就是方便自己能够随时随地的把这个博客用起来，免得一段时间后，都忘记咋用了！
+<!--more-->
 ### 部署文章
 已经集成了 ci 同时为了方便上传文章，写了一个 `push_hexo.sh` 的脚本，文章有更改的时候只
 需要运行 `sh push_hexo.sh` 即可
